tests/ui/rfc-2632-const-trait-impl/specializing-constness.stderr
error: cannot specialize on const impl with non-const impl
  --> $DIR/specializing-constness.rs:20:1
   |
LL | impl<T: Default + Sup> A for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing `~const` qualifier for specialization
  --> $DIR/specializing-constness.rs:20:9
   |
LL | impl<T: Default + Sup> A for T {
   |         ^^^^^^^

error: aborting due to 2 previous errors

